<resources>
    <string name="app_name">Labo2</string>
    <string name="btn_async">Async</string>
    <string name="btn_delayed">Delayed</string>
    <string name="btn_serialized">Serialized</string>
    <string name="btn_compressed">Compressed</string>
    <string name="btn_graphql">GraphQL</string>
    <string name="str_enter_text">Enter some text!</string>
    <string name="str_send">Send</string>
    <string name="str_response_title"><b>Server response:</b></string>
    <string name="str_none">{none}</string>
    <string name="str_waiting_server">Waiting for server response...</string>
    <string name="str_authors">Authors</string>
    <string name="str_books">Books</string>

    <string name="str_enter_name">Enter your name</string>
    <string name="str_enter_firstname">Enter your firstname</string>
    <string name="str_enter_middlename">Enter your middlename</string>
    <string name="str_enter_phone_number_home">Enter your home phone number</string>
    <string name="str_enter_phone_number_mobile">Enter your mobile phone number</string>
    <string name="str_enter_phone_number_work">Enter your work phone number</string>
  
    <string name="str_authors_loading">Authors loading</string>
    <string name="str_authors_loaded">Authors loaded</string>

</resources>