<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/app_horizontal_margin"
    android:layout_marginEnd="@dimen/app_horizontal_margin"
    android:layout_marginTop="@dimen/app_vertical_margin"
    android:layout_marginBottom="@dimen/app_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/iict_heig"
        app:layout_constraintBottom_toTopOf="@id/main_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
        android:id="@+id/main_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/main_btn_async"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_async" />

        <Button
            android:id="@+id/main_btn_delayed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delayed" />

        <Button
            android:id="@+id/main_btn_serialized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_serialized" />

        <Button
            android:id="@+id/main_btn_compressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_compressed" />

        <Button
            android:id="@+id/main_btn_graphql"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_graphql" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>